# declarai-chat-fastapi-streamlit

./: .env  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: chat.py  main.py
